--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,15 +1,17 @@
 // fonts
-$headingFontFamily: "Times New Roman", Times, serif;
-$standardFontFamily: 'Hind', sans-serif;
+$headingFontFamily: 'Lora', serif;
+$standardFontFamily:  'Open Sans', sans-serif;
 $bodyFont:#333; 
 
 //colours
-$primaryColour:#eee; 
-$secondaryColour:#ccc; 
-$primaryColourText:#666;
-$secondaryColourText:#666;
-$emphasisColour:#333; 
-
+$primaryColour:#56729A; 
+$secondaryColour:#A2B464;
+$emphasisColour:#8D9A5E;
+$deemphasisColour:#98B8E7;
+$primaryColourText:#fff;
+$secondaryColourText:#fff;
+$emphasisColourText:#fff; 
+$deemphasisColourText:#fff; 
 
 // Social icons
 $facebook:#3B5998;
