--- a/css/style.css
+++ b/css/style.css
@@ -1,199 +1,336 @@
 /* fonts */
 /* line 6, ../sass/style.scss */
 body {
-  font-family: "Hind", sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: #333; }
 
 /* line 10, ../sass/style.scss */
-h1, h2, h3, h4, h4, h5, h6 {
-  font-family: "Times New Roman", Times, serif;
+h1, h2, h3, h4, h4, h5, h6,
+h2 > a {
+  font-family: "Lora", serif;
+  color: #A2B464;
   letter-spacing: 1px; }
 
-/* line 15, ../sass/style.scss */
+/* line 17, ../sass/style.scss */
 h1 {
   font-size: 2.8rem; }
 
-/* line 16, ../sass/style.scss */
+/* line 18, ../sass/style.scss */
 h2 {
-  font-size: 2.4rem; }
-
-/* line 17, ../sass/style.scss */
-h3 {
   font-size: 2.2rem; }
 
-/* line 18, ../sass/style.scss */
-h4 {
-  font-size: 2.0rem; }
-
 /* line 19, ../sass/style.scss */
+h3 {
+  font-size: 2.2rem;
+  color: #56729A; }
+
+/* line 20, ../sass/style.scss */
+h4 {
+  font-size: 2.0rem;
+  color: #56729A; }
+
+/* line 21, ../sass/style.scss */
 h5 {
   font-size: 1.6rem; }
 
-/* line 20, ../sass/style.scss */
+/* line 22, ../sass/style.scss */
 h6 {
-  font-size: 1.4rem; }
+  font-size: 1.6rem;
+  color: #56729A; }
 
-/* line 21, ../sass/style.scss */
-p, li {
+/* line 23, ../sass/style.scss */
+body, p, li {
   font-size: 1.6rem; }
 
-/* content */
+/* line 24, ../sass/style.scss */
+li > a, a {
+  color: #56729A; }
+
 /* line 25, ../sass/style.scss */
+li {
+  color: #333; }
+
+/* content */
+/* line 29, ../sass/style.scss */
 #content {
   min-height: 450px; }
 
 /* misc */
-/* line 35, ../sass/style.scss */
+/* line 39, ../sass/style.scss */
 section {
   margin: 15px 0; }
 
-/* line 38, ../sass/style.scss */
+/* line 42, ../sass/style.scss */
 .home section img {
   width: 100%;
   height: auto; }
 
-/* line 42, ../sass/style.scss */
+/* line 46, ../sass/style.scss */
 .sectionOdd {
   padding: 15px 0;
   margin: 0; }
 
-/* line 47, ../sass/style.scss */
+/* line 51, ../sass/style.scss */
 .sectionEven {
   padding: 15px 0;
   margin: 0; }
 
-/* line 52, ../sass/style.scss */
-.wrapTopbar, .wrapFooter {
-  background-color: #eee; }
+/* line 56, ../sass/style.scss */
+.wrapFooter {
+  background-color: #56729A; }
 
-/* line 55, ../sass/style.scss */
+/* line 59, ../sass/style.scss */
 .marginTop {
   margin-top: 20px; }
 
-/* line 58, ../sass/style.scss */
+/* line 62, ../sass/style.scss */
 .marginBottom {
   margin-bottom: 20px; }
 
-/* line 61, ../sass/style.scss */
+/* line 65, ../sass/style.scss */
 .picleft img {
   float: left;
   margin-right: 20px; }
 
-/* line 65, ../sass/style.scss */
+/* line 69, ../sass/style.scss */
 .picright img {
   float: right;
   margin-left: 20px; }
 
-/* line 69, ../sass/style.scss */
+/* line 73, ../sass/style.scss */
 .clearfix {
   clear: both; }
 
-/* line 72, ../sass/style.scss */
+/* line 76, ../sass/style.scss */
 .textRight {
   text-align: right; }
 
-/* line 75, ../sass/style.scss */
+/* line 79, ../sass/style.scss */
 .textLeft {
   text-align: left; }
 
-/* line 78, ../sass/style.scss */
+/* line 82, ../sass/style.scss */
 .textCenter {
   text-align: center; }
 
-/* header */
-/* line 89, ../sass/style.scss */
-#topbar .container {
-  padding: 0; }
-/* line 92, ../sass/style.scss */
-#topbar li {
-  font-size: 1.6rem;
-  border-right: 1px solid #e1e1e1; }
-/* line 96, ../sass/style.scss */
-#topbar .social-links li {
-  margin-left: 15px;
-  margin-right: -5px;
-  border-right: none; }
-/* line 101, ../sass/style.scss */
-#topbar .navbar {
-  min-height: 30px; }
-/* line 104, ../sass/style.scss */
-#topbar .navbar-nav > li > a {
-  padding-top: 8px;
-  padding-bottom: 8px; }
+/* line 85, ../sass/style.scss */
+hr {
+  border-top: 1px solid #A2B464; }
 
-/* line 109, ../sass/style.scss */
-.header {
-  margin-top: 15px; }
+/* topmenu */
+/* line 91, ../sass/style.scss */
+#topbar {
+  background-color: #56729A; }
+  /* line 93, ../sass/style.scss */
+  #topbar li {
+    font-size: 1.6rem;
+    border-right: 1px solid #728cb1; }
+  /* line 97, ../sass/style.scss */
+  #topbar .social-links li {
+    margin-left: 15px;
+    margin-right: -5px;
+    border-right: none; }
+  /* line 102, ../sass/style.scss */
+  #topbar .navbar-nav > li > a {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    color: #fff; }
+  /* line 107, ../sass/style.scss */
+  #topbar .navbar-nav > .active > a, #topbar .navbar-nav > li > a:hover {
+    background-color: #fff;
+    color: #56729A; }
 
-/* line 112, ../sass/style.scss */
-#menu-top-menu-right {
-  float: right; }
-
+@media only screen and (min-width: 768px) {
+  /* line 113, ../sass/style.scss */
+  #topbar {
+    height: 36px; } }
 /* menu */
-/* line 120, ../sass/style.scss */
+/* line 119, ../sass/style.scss */
 .navbar {
   margin: 0;
   z-index: 9999;
   background: none;
   border: none; }
-  /* line 125, ../sass/style.scss */
+  /* line 124, ../sass/style.scss */
   .navbar li {
     font-size: 2.0rem; }
 
-/* line 128, ../sass/style.scss */
+/* line 126, ../sass/style.scss */
 .navbar-default, .navbar-default .navbar-nav > li > a {
-  color: #666; }
+  color: #56729A; }
 
-/* line 131, ../sass/style.scss */
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-  color: #666; }
+/* line 129, ../sass/style.scss */
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+  background-color: #56729A;
+  color: #fff; }
 
 /* line 134, ../sass/style.scss */
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-  color: #666; }
+.navbar-default .navbar-nav > .active > a {
+  color: #A2B464;
+  background: none; }
 
-/* line 138, ../sass/style.scss */
-.navbar-default .navbar-collapse {
-  border: none; }
+/* line 140, ../sass/style.scss */
+.dropdown-menu {
+  background-color: #56729A;
+  text-align: right; }
 
-/* slideshow */
-/* line 146, ../sass/style.scss */
-pre {
-  display: none; }
+/* line 144, ../sass/style.scss */
+.dropdown-menu > li > a {
+  color: #fff; }
 
-/* line 148, ../sass/style.scss */
+/* line 147, ../sass/style.scss */
+.navbar-default .navbar-nav .open .dropdown-menu > li > a {
+  background-color: #56729A;
+  color: #fff; }
+
+/* line 151, ../sass/style.scss */
+.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
+  background-color: #fff;
+  color: #56729A; }
+
+@media only screen and (max-width: 768px) {
+  /* line 156, ../sass/style.scss */
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    background-color: white;
+    color: #56729A; }
+
+  /* line 160, ../sass/style.scss */
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
+    background-color: #56729A;
+    color: #fff; } }
+@media only screen and (min-width: 768px) and (max-width: 1200px) {
+  /* line 169, ../sass/style.scss */
+  .navbar li {
+    font-size: 1.4rem; }
+
+  /* line 171, ../sass/style.scss */
+  .nav > li > a {
+    padding: 10px 5px; } }
+/* line 177, ../sass/style.scss */
+.navbar-default .navbar-toggle {
+  border-color: white;
+  background-color: #56729A; }
+
+/* line 181, ../sass/style.scss */
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: white; }
+
+/* line 186, ../sass/style.scss */
+.footermenu ul {
+  margin: 40px 0 0 -40px; }
+
+/* line 189, ../sass/style.scss */
+.footermenu li {
+  display: inline; }
+
+/* line 192, ../sass/style.scss */
+.footermenu li:after {
+  content: " | "; }
+
+/* line 195, ../sass/style.scss */
+.footermenu li:last-child:after {
+  content: " "; }
+
+/* full width nivo slideshow */
+/* line 201, ../sass/style.scss */
+.transwrap {
+  background-color: white;
+  background: rgba(255, 255, 255, 0.9);
+  position: relative;
+  z-index: 1; }
+
+/* line 207, ../sass/style.scss */
+.metaslider {
+  z-index: 0;
+  margin-top: -90px;
+  max-height: 700px;
+  overflow: hidden; }
+
+/* line 213, ../sass/style.scss */
 .nivo-caption {
-  top: 115px;
+  top: 45%;
+  padding: 0 100px !important;
   text-align: center;
   font-size: 50px;
   background: none !important;
   opacity: 1 !important; }
 
+/* line 221, ../sass/style.scss */
+.theme-default .nivo-caption a {
+  border: 0 !important; }
+
+/* line 224, ../sass/style.scss */
+.theme-default .nivo-caption a:hover {
+  text-decoration: none; }
+
+/* line 227, ../sass/style.scss */
+.theme-default a.nivo-prevNav {
+  left: 40px !important; }
+
+/* line 228, ../sass/style.scss */
+.theme-default a.nivo-nextNav {
+  right: 40px !important; }
+
+@media only screen and (max-width: 480px) {
+  /* line 231, ../sass/style.scss */
+  .theme-default .nivo-caption {
+    display: none !important; } }
+@media only screen and (max-width: 768px) {
+  /* line 237, ../sass/style.scss */
+  .nivo-caption {
+    font-size: 32px; } }
+@media only screen and (min-width: 992px) {
+  /* line 243, ../sass/style.scss */
+  .transwrap {
+    padding-bottom: 10px; }
+
+  /* line 246, ../sass/style.scss */
+  .metaslider {
+    margin-top: -110px; } }
+@media only screen and (min-width: 1366px) {
+  /* line 251, ../sass/style.scss */
+  .metaslider {
+    margin-top: -260px; }
+
+  /* line 254, ../sass/style.scss */
+  .theme-default .nivo-directionNav a {
+    top: 450px; }
+
+  /* line 257, ../sass/style.scss */
+  .nivo-caption {
+    top: 400px;
+    padding: 0 300px !important; } }
 /* footer */
-/* line 160, ../sass/style.scss */
+/* line 268, ../sass/style.scss */
 #prefooter {
-  color: white; }
-  /* line 162, ../sass/style.scss */
+  color: #fff; }
+  /* line 270, ../sass/style.scss */
   #prefooter .container {
     padding: 5px 0; }
 
-/* line 164, ../sass/style.scss */
+/* line 272, ../sass/style.scss */
 #footer {
+  color: #fff;
   min-height: 210px;
   text-align: left;
   margin-top: 10px; }
-  /* line 169, ../sass/style.scss */
+  /* line 277, ../sass/style.scss */
   #footer li {
-    list-style-type: none; }
-  /* line 176, ../sass/style.scss */
+    list-style-type: none;
+    color: #fff; }
+  /* line 281, ../sass/style.scss */
+  #footer h2, #footer h5, #footer a {
+    color: #fff; }
+  /* line 284, ../sass/style.scss */
   #footer h4 {
     font-size: 20px; }
 
-/* line 181, ../sass/style.scss */
+/* line 289, ../sass/style.scss */
 .copyright {
   margin-top: 40px; }
 
-/* line 185, ../sass/style.scss */
+/* line 293, ../sass/style.scss */
 .designedBy {
   background-image: url(../img/designedbysprite.jpg);
   background-position: 0 0;
@@ -204,108 +341,160 @@ pre {
   overflow: hidden;
   margin-top: 30px; }
 
-/* line 194, ../sass/style.scss */
+/* line 302, ../sass/style.scss */
 .designedBy:hover {
   background-image: url(../img/designedbysprite.jpg);
   background-position: 0 -29px; }
 
-/* forms */
-/* line 201, ../sass/style.scss */
-.form-group .form-control {
-  width: 240px;
-  margin-right: 20px; }
-
 /* site social icons */
-/* line 212, ../sass/style.scss */
+/* line 308, ../sass/style.scss */
 .social-links {
   margin: 8px 0 0 -40px; }
-  /* line 214, ../sass/style.scss */
+  /* line 310, ../sass/style.scss */
   .social-links h2 {
     position: absolute;
     margin-left: -9999px; }
-  /* line 218, ../sass/style.scss */
+  /* line 314, ../sass/style.scss */
   .social-links li {
     margin-right: 10px;
     list-style: none;
     display: inline; }
-  /* line 223, ../sass/style.scss */
+  /* line 319, ../sass/style.scss */
   .social-links li a {
     overflow: hidden; }
-  /* line 226, ../sass/style.scss */
-  .social-links .fa:hover {
-    color: #666;
-    text-decoration: none; }
-  /* line 230, ../sass/style.scss */
+  /* line 322, ../sass/style.scss */
   .social-links .fa {
-    color: #666;
-    font-size: 2.4rem; }
+    color: #fff;
+    font-size: 2.4rem;
+    text-decoration: none; }
 
-/* line 235, ../sass/style.scss */
+/* line 329, ../sass/style.scss */
+#topbar .social-links {
+  margin: 0; }
+/* line 332, ../sass/style.scss */
 #topbar .social-links .fa {
-  font-size: 1.8rem; }
+  color: #fff;
+  font-size: 1.8rem;
+  padding: 10px;
+  margin: 0; }
+/* line 338, ../sass/style.scss */
+#topbar .social-links .fa:hover {
+  background-color: #fff;
+  color: #56729A; }
 
-/* buttons */
-/* line 241, ../sass/style.scss */
-.btn {
-  background-color: #eee;
-  color: #666;
+/* buttons and forms*/
+/* line 346, ../sass/style.scss */
+.btn, input#fscf_submit1 {
+  border: 1px solid #A2B464;
+  transition: background-color 0.5s ease;
+  background-color: white;
+  color: #56729A;
   font-size: 1.8rem;
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
   border-radius: 0; }
-  /* line 246, ../sass/style.scss */
-  .btn :hover {
-    background-color: #ccc;
-    color: #666; }
-  /* line 250, ../sass/style.scss */
-  .btn .fa {
+  /* line 353, ../sass/style.scss */
+  .btn .fa, input#fscf_submit1 .fa {
     padding-left: 10px; }
 
-/* line 257, ../sass/style.scss */
+/* line 357, ../sass/style.scss */
+.btn:hover, input#fscf_submit1:hover {
+  background-color: #A2B464;
+  color: #fff; }
+
+/* line 361, ../sass/style.scss */
+input, textarea {
+  border: 1px solid #56729A; }
+
+@media only screen and (min-width: 768px) {
+  /* line 365, ../sass/style.scss */
+  #FSContact1 label {
+    width: 200px;
+    float: left; } }
+/* line 373, ../sass/style.scss */
+button#catapultCookie {
+  background-color: #A2B464;
+  color: #fff; }
+
+/* line 379, ../sass/style.scss */
 .easy_t_single_testimonial {
-  outline: 1px solid #ccc;
-  border-left: 5px solid #ccc; }
+  outline: 1px solid #A2B464;
+  margin-bottom: 30px; }
 
-/* line 261, ../sass/style.scss */
+/* line 383, ../sass/style.scss */
+.easy_t_single_testimonial {
+  position: relative; }
+
+/* line 386, ../sass/style.scss */
+.easy_testimonial:after {
+  background-image: url("../img/quote.gif");
+  position: absolute;
+  background-repeat: no-repeat;
+  content: " ";
+  display: block;
+  width: 23px;
+  height: 23px;
+  bottom: -23px;
+  left: 20px; }
+
+/* line 395, ../sass/style.scss */
 .testimonial_body {
-  color: #666; }
+  color: #56729A; }
 
-/* line 264, ../sass/style.scss */
+/* line 398, ../sass/style.scss */
 .easy_testimonial_image_wrapper {
   display: none; }
 
-/* line 267, ../sass/style.scss */
+/* line 401, ../sass/style.scss */
 .testimonial_author {
   margin-top: 15px;
-  color: #666; }
+  color: #A2B464; }
+
+/* line 405, ../sass/style.scss */
+blockquote {
+  border-left: 5px solid #A2B464; }
+
+/* line 410, ../sass/style.scss */
+.ewd-ufaq-post-margin-symbol span {
+  font-size: 16px !important;
+  margin-top: 6px !important; }
+
+/* line 414, ../sass/style.scss */
+.ewd-ufaq-post-margin-symbol {
+  color: white;
+  background-color: #A2B464; }
+
+/* line 418, ../sass/style.scss */
+.ewd-ufaq-post-active .ewd-ufaq-post-margin-symbol, .ewd-ufaq-post-margin-symbol:hover {
+  background-color: #56729A; }
 
 /* responsive adjustments */
 /* small phones */
 @media only screen and (max-width: 480px) {
-  /* line 277, ../sass/style.scss */
+  /* line 426, ../sass/style.scss */
   .slideshow {
     display: none; } }
 /* Extra Small Devices, Tablets - col-xs-x */
 @media only screen and (max-width: 768px) {
-  /* line 282, ../sass/style.scss */
+  /* line 431, ../sass/style.scss */
   .navbar .navbar-collapse {
     text-align: right; } }
 /* Small Devices, Desktops - col-sm-x  */
 @media only screen and (min-width: 768px) {
-  /* line 289, ../sass/style.scss */
+  /* line 438, ../sass/style.scss */
   .navbar {
     margin-bottom: 0px; }
 
   /* center navbar */
-  /* line 294, ../sass/style.scss */
+  /* line 443, ../sass/style.scss */
   #mainnav .navbar-nav {
     float: none;
     margin: 0 auto;
     display: block;
     text-align: center;
-    border-top: solid 1px #666;
-    border-bottom: solid 1px #666; }
-  /* line 302, ../sass/style.scss */
+    border-top: solid 1px #56729A;
+    border-bottom: solid 1px #56729A; }
+  /* line 451, ../sass/style.scss */
   #mainnav .navbar-nav > li {
     display: inline-block;
     float: none; } }
